force-app/main/default/objects/Grade__c/fields/Type_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assessment__c</fullName>
    <label>Type of Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>