force-app/main/default/objects/Grade__c/validationRules/Valid_Assesstment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Assesstment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Assessment_Date__c &lt;= ( TODAY() -15),
Assessment_Date__c &gt;= ( TODAY() +15)
 )</errorConditionFormula>
    <errorMessage>Assessment Date must be within 15 days of today&apos;s date.</errorMessage>
</ValidationRule>