force-app/main/default/objects/Grade__c/validationRules/Valid_Grade.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Grade</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Grade__c &lt; 0, Grade__c &gt; 10)</errorConditionFormula>
    <errorMessage>The grade must be greater or equal to 0, or less or equal to 10</errorMessage>
</ValidationRule>